# 0g-openai-proxy

./: .dockerignore  .gitignore  README.md  build.sh  docker-compose.yml
.github/workflows/: build.yml
deploy/: config.mainnet.yml  config.testnet.yml  docker-compose.yaml
deploy/attestor/: docker-compose.yaml
deploy/client-provider/: config.mainnet.yml  config.testnet.yml  docker-compose.yaml
openai-proxy-attestor/: .dockerignore  Dockerfile  README.md  build.gradle  build.sh  docker-compose.yaml  settings.gradle
openai-proxy-attestor/callback/pado-attestation-callback-lib/: CMakeLists.txt  IPadoCallbackLib.h  PadoCallbackLib.cpp  PadoCallbackLib.h  README.md
openai-proxy-attestor/callback/pado-attestation-callback-test/: CMakeLists.txt  IPadoCallbackLib.h  PadoCallbackLib.h  main.cpp  test.sh
openai-proxy-attestor/certs/: 3513523f.0  6187b673.0  653b494a.0  ca.crt
openai-proxy-attestor/gradle/wrapper/: gradle-wrapper.properties
openai-proxy-attestor/libs/: CMakeLists.txt  com_pado_jni_JNI.cpp  com_pado_jni_JNI.h  compile.sh
openai-proxy-attestor/libs/include/: IPadoCallbackLib.h  PadoCallbackLib.h  pado.h  pado_simulator.h
openai-proxy-attestor/libs/macos/: CMakeCache.txt  Makefile  cmake_install.cmake
openai-proxy-client/: .env.example  Dockerfile  README.md  build.sh  package-lock.json  package.json
openai-proxy-client/src/: server.js
openai-proxy-client/src/attestation/: errors.js  pool.js  protocol.js  shared.js  worker.js
openai-proxy-client/test/: concurrency.js  core-sdk.js  test.js
src/: server.js
test/: test.js
(+46 files in other folders)
